tests/should_fail/for_destructure_struct_too_many.nv
// should_fail: for destructure struct with too many fields
module for_destructure_struct_too_many
struct Point { x: Int, y: Int }
let points: [Point] = [Point(1, 2)]
for Point { x, y, z } in points {
    println(x)
}
